[package]
name = "helpman"
description = "CLI tool to generate manpages from a rust binary's help output.  This works well with clap output.  If there are subcommands, their help gets included in the man page."
homepage = "https://github.com/jvasile/helpman"
repository = "https://github.com/jvasile/helpman.git"
license = "mit"
version = "0.1.1"
edition = "2024"
authors = ["James Vasile <jvasile@gmali.com>"]
keywords = ["cli", "manual", "man pages", "packaging"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true # LTO instructs the linker to optimize at the link stage. This can remove dead code and may reduces binary size.
codegen-units = 1 # Don't parallelize build. Parallel code gen speeds compile, but hinders optimization.
panic = "abort" # No stack trace on panic

[package.metadata.deb]
maintainer = "James Vasile <james@gmail.com>"
copyright = "2024, James Vasile <james@gmail.com>"
extended-description = "CLI tool to generate manpages from a rust binary's help output.  This works well with clap output.  If there are subcommands, their help gets included in the man page."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
 ["target/release/helpman", "usr/bin/", "755"],
 ["target/release/helpman.1.gz", "usr/share/man/man1/", "644"],
]
